# Deploying-a-Scalable-ML-Pipeline-with-FastAPI

./: .gitignore  .pre-commit-config.yaml  PROJECT_STUDY_DURING_PROJECT_ONGOING.md  local_api.py  main.py  model_card_template.md  pyproject.toml  test_ml.py  train_model.py
.dvc/: config
.github/workflows/: ci.yml
ml/: model.py
model/: encoder.pkl  encoder.pkl.dvc  lb.pkl  lb.pkl.dvc  model.pkl.dvc
notebooks/: census.ipynb
