[project]
name = "deploying-a-scalable-ml-pipeline-with-fastapi"
version = "0.1.0"
description = "Develop a classification model and deploy the model using FastAPI package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "gunicorn>=25.0.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "dvc>=3.66.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]
